# paseo-runtimes

./: Cargo.toml  paseo.local.raw.json
.github/workflows/: build-release.yaml  generate-chain-specs.yaml
chain-spec-generator/: Cargo.toml
chain-spec-generator/src/: common.rs  main.rs  relay_chain_specs.rs  system_parachain_specs.rs  system_parachains_specs.rs
chain-spec-generator_old/: Cargo.toml
chain-spec-generator_old/src/: main.rs  relay_chain_specs.rs
chain-specs/: asset-hub-local.json  paseo.local.json
chain-specs/local/: asset-hub-paseo-local.json  bridge-hub-paseo-local.json  coretime-paseo-local.json  coretime-paseo-tot.json  coretime-paseo.json  people-paseo-local.json
relay/paseo/src/: lib.rs
system-parachains/asset-hub-paseo/: Cargo.toml
system-parachains/asset-hub-paseo/src/: lib.rs  xcm_config.rs
system-parachains/bridge-hub-paseo/: Cargo.toml
system-parachains/bridge-hub-paseo/src/: bridge_to_westend_config.rs  lib.rs  xcm_config.rs
system-parachains/constants/: Cargo.toml
