[package]
name = "chain-spec-generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde = { features = ["derive"], workspace = true }
hex-literal = "0.4.1"

paseo-runtime = { path = "../relay/paseo" }
paseo-runtime-constants = { path = "../relay/paseo/constants", default-features = true }
asset-hub-paseo-runtime = { path = "../system-parachains/asset-hub-paseo" }

sp-consensus-aura = { workspace = true }
sc-chain-spec = { workspace = true }
polkadot-runtime-parachains = { workspace = true, default-features = true }
polkadot-primitives = { workspace = true, default-features = true }
sp-consensus-babe = { workspace = true, default-features = true }
sp-authority-discovery = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
pallet-staking = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true }
sp-runtime = { workspace = true, default-features = true }
sp-consensus-beefy = { workspace = true, default-features = true }
xcm = { package = "staging-xcm", version = "8.0.1" }
parachains-common = { workspace = true, default-features = true }
cumulus-primitives-core = { workspace = true, default-features = true }

[features]
fast-runtime = ["paseo-runtime/fast-runtime"]
runtime-benchmarks = [
    "paseo-runtime/runtime-benchmarks",
    "asset-hub-paseo-runtime/runtime-benchmarks",
]

force-debug = [
    "paseo-runtime/force-debug",
    "asset-hub-paseo-runtime/force-debug",
]
